Creacion de items de busqueda

--- a/public/src/css/styles.less
+++ b/public/src/css/styles.less
@@ -70,3 +70,19 @@ html {
     }
   }
 }
+
+#_main-content {
+  .__just-content {
+    ._items-films {
+      ._content-item {
+        height: 200px;
+        box-shadow: 2px 2px 20px rgba(0,0,0,.25);
+        border-radius: 15px;
+        background-image: url("../img/test/loading.gif");
+        background-size: auto 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+    }
+  }
+}
