--- a/public/src/css/styles.less
+++ b/public/src/css/styles.less
@@ -50,10 +50,12 @@ html {
       background: #fff;
       position: absolute;
       top: 85%;
-      box-shadow: 4px 3px 25px rgba(84, 84, 84, 0.28);
-      max-height: 300px;
+      box-shadow: 4px 3px 25px rgba(84,84,84,.28);
+      /* max-height: 300px; */
       padding: 5px;
       display: none;
+      height: auto;
+      /* overflow-y: scroll; */
 
       &.is-active{
         display: block;
