Creador del autocompletar y listado abajo

--- a/public/src/css/styles.less
+++ b/public/src/css/styles.less
@@ -25,6 +25,7 @@ html {
       padding-bottom: 15px;
       padding-left: 25px;
       border: none;
+      padding-right: 60px;
     }
 
     ._button-search {
